# CSE335s-OS-Project

./: CMakeLists.txt  FCFS.h  README.md  Scheduler.cpp  Scheduler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OS-scheduler/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: FCFS.h  Process.h  RR_Scheduler.h  SJFNonPreemptive.h  SJFPreemptive.h  SJF_NonPreemptive.h  SJF_Preemptive.h  Scheduler.h  SchedulerBase.h  priorityNonPreemtive.h  priorityPreemtive.h
schedulerGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: FCFS.cpp  RR_Scheduler.cpp  SJFNonPreemptive.cpp  SJFPreemptive.cpp  Scheduler.cpp  SchedulerBase.cpp  priorityNonPreemtive.cpp  priorityPreemtive.cpp  sjf_NonPreemptive.cpp  sjf_Preemptive.cpp
